@@ -1,1 +1,13 @@
 # expressway_superelevation_calculation
+
+## 环境
+* jdk17
+* javafx sdk17
+* maven
+
+## 启动
+* 在下面链接下载Javafx sdk17 https://gluonhq.com/products/javafx/
+* 在启动vm参数添加以下命令
+  ```
+  --module-path 你的javafx sdk路径\lib --add-modules javafx.controls,javafx.fxml
+  ```
